done quizzes category

--- a/quizzes/quizzes.html
+++ b/quizzes/quizzes.html
@@ -24,32 +24,44 @@
             </div>
         </nav>
     </header>
-    <main class="quizzes-main">
-        <div class="card">
-            <div class="badge-section"></div>
-            <span class="badge-best-seller">Best seller</span>
-          <!--here,cross icon and out of stock is optional and disabled for 
-           this card,you can active these by removing "display-none" class-->
-            <span class="display-none">
-                <i class="far fa-times-circle cross-icon "></i>
-            </span>
-            <span class="out-of-stock display-none">
-                Out Of Stock
-            </span>
-            <div class="card-main-section">
-                <img src="/URL-of-image" class="product-img" alt="">
-                <main class="middle">
-                    <p class="para">Apple</p>
-                    <div class="small-1">iPhone 13 (256GB) - Midnight</div>
-                    <div class="small-2">₹78900
-                        <span class="real-price">MRP: ₹79900(1% OFF)</span>
+    <main class="quizzes-main flex justify-content-center mt-3">
+        <div class="card quiz-card">
+            <div class="card-main-section quiz-card-main">
+                <img src="/assets/pesa.jpg" class="product-img quiz-img" alt="">
+                <main class="middle p-1">
+                    <p class="para">Movies</p>
+                    <div class="small-1">Take part in the amazing quiz and test your knowledge in Movies</div>
+                    <div class="flex space-between mt-1">
+                        <div>2 questions</div>
+                        <a href=""><button class="btn basic start-quiz-btn quiz-bg-color">Start Quiz</button></a>
                     </div>
                 </main>
-                <div class="btn-section">
-                    <button class="cart-button">
-                        Add to cart
-                    </button>
-                </div>
+            </div>
+        </div>
+        <div class="card quiz-card">
+            <div class="card-main-section quiz-card-main">
+                <img src="/assets/mahabharat.jpeg" class="product-img quiz-img" alt="">
+                <main class="middle p-1">
+                    <p class="para">Mahabharata</p>
+                    <div class="small-1">Take part in the amazing quiz and test your knowledge in Mahabharata</div>
+                    <div class="flex space-between mt-1">
+                        <div>2 questions</div>
+                        <a href=""><button class="btn basic start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                    </div>
+                </main>
+            </div>
+        </div>
+        <div class="card quiz-card">
+            <div class="card-main-section quiz-card-main">
+                <img src="/assets/fashion-1.jpeg" class="product-img quiz-img" alt="">
+                <main class="middle p-1">
+                    <p class="para">Fashion</p>
+                    <div class="small-1">Take part in the amazing quiz and test your knowledge in Fashion</div>
+                    <div class="flex space-between mt-1">
+                        <div>2 questions</div>
+                        <a href=""><button class="btn basic start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                    </div>
+                </main>
             </div>
         </div>
     </main>
