added question number and score

--- a/mcq/mcq.html
+++ b/mcq/mcq.html
@@ -13,6 +13,14 @@
         <div class="centered">
             <h1>Movie Quiz</h1>
         </div>
+        <div class="flex space-between">
+            <div>
+                1/2
+            </div>
+            <div>
+                Score: 0
+            </div>
+        </div>
         <div class="question">
             <h1>Which of the following states in India is called as 'Rice Bowl Of India'?</h1>
             <div class="centered flex-direction-col">
