added image on quiz home page

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
             <div class="quiz-logo quiz-color">
                 GarudaQuiz
             </div>
-            <div class="e-com-social">
-                <div class="ecom-login-container">
-                    <a href=""><button class="login-btn quiz-bg-color">Login</button></a>
-                </div>
-            </div>
         </nav>
     </header>
-    <main class="quiz-home-main centered flex-direction-col">
-        <div class="m-2">
+    <main class="quiz-home-main flex centered">
+        <div class="quiz-img-wrapper mt-2">
+            <img src="/assets/undraw_transfer_money_rywa (1).svg" alt="" class="quiz-img">
+        </div>
+        <div class="m-2 quiz-start">
             <h1 class="main-color quiz-color">Welcome to Garuda Quiz</h1>
             <p class="quiz-text">
                 Are you interested in Quizes ?
             </p>
             <p>Participate in the quizzes handpicked for you</p>
+            <div class="p-2">
+                <a href=""><button class="btn quiz-btn quiz-bg-color">Start Quiz</button></a>
+            </div>
         </div>
-        <a href=""><button class="btn basic quiz-btn quiz-bg-color">Start Quiz</button></a>
     </main>
 </body>
 
