color updated and cards caenter

--- a/quizzes/quizzes.html
+++ b/quizzes/quizzes.html
@@ -17,23 +17,18 @@
             <div class="quiz-logo quiz-color">
                 GarudaQuiz
             </div>
-            <div class="e-com-social">
-                <div class="ecom-login-container">
-                    <a href=""><button class="login-btn quiz-bg-color">Login</button></a>
-                </div>
-            </div>
         </nav>
     </header>
-    <main class="quizzes-main flex justify-content-center mt-3">
+    <main class="quizzes-main flex centered mt-3">
         <div class="card quiz-card">
             <div class="card-main-section quiz-card-main">
                 <img src="/assets/pesa.jpg" class="product-img quiz-img" alt="">
                 <main class="middle p-1">
-                    <p class="para">Movies</p>
+                    <p class="para">Phir Hera Pheri</p>
                     <div class="small-1">Take part in the amazing quiz and test your knowledge in Movies</div>
                     <div class="flex space-between mt-1">
-                        <div>2 questions</div>
-                        <a href=""><button class="btn basic start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                        <div>3 questions</div>
+                        <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
                     </div>
                 </main>
             </div>
@@ -45,8 +40,8 @@
                     <p class="para">Mahabharata</p>
                     <div class="small-1">Take part in the amazing quiz and test your knowledge in Mahabharata</div>
                     <div class="flex space-between mt-1">
-                        <div>2 questions</div>
-                        <a href=""><button class="btn basic start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                        <div>3 questions</div>
+                        <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
                     </div>
                 </main>
             </div>
@@ -58,8 +53,8 @@
                     <p class="para">Fashion</p>
                     <div class="small-1">Take part in the amazing quiz and test your knowledge in Fashion</div>
                     <div class="flex space-between mt-1">
-                        <div>2 questions</div>
-                        <a href=""><button class="btn basic start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                        <div>3 questions</div>
+                        <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
                     </div>
                 </main>
             </div>
