--- a/rules/maha-rules.html
+++ b/rules/maha-rules.html
@@ -16,14 +16,14 @@
             <div class="flex justify-content-center">
                 <h1 class="rules mg-auto">Rules</h1>
             </div>
-            <div class="m-1">This Quiz consists of 2 questions.
+            <div class="m-1">This Quiz consists of 3 questions.
             </div>
             <div class="m-1">Each right answer carries 2 points
             </div>
             <div class="m-1">Each wrong answer has negative mark of -1</div>
             <div class="m-1">All the best!!</div>
-            <div class="flex justify-content-center">
-                <a href=""><button class="btn basic rules-btn quiz-bg-color">Start Quiz</button></a>
+            <div class="flex centered">
+                <a href=""><button class="btn rules-btn quiz-bg-color">Start Quiz</button></a>
             </div>
         </div>
     </div>
