Update:more questions added

--- a/mcq/hera-pheri/hera-pheri-1.html
+++ b/mcq/hera-pheri/hera-pheri-1.html
@@ -6,37 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GarudaQuiz/MCQ</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
-    <link rel="stylesheet" href="/mcq/mcq.css">
+    <link rel="stylesheet" href="/mcq/hera-pheri/hera-pheri.css">
 </head>
 <body>
-    <div class="question-wrapper">
+    <div class="question-wrapper pb-2">
         <div class="centered">
-            <h1>Movie Quiz</h1>
+            <h1>Phir Hera Pheri Quiz</h1>
         </div>
-        <div class="flex space-between">
+        <div class="flex space-between mx-3">
             <div>
-                1/2
+                1/3
             </div>
             <div>
                 Score: 0
             </div>
         </div>
         <div class="question">
-            <h1>Which of the following states in India is called as 'Rice Bowl Of India'?</h1>
+            <h1 class="mcq">For how long did Babu Rao study?</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
-                    <button class="btn basic option-btn">Andhra Pradesh</button>
+                    <button class="btn basic option-btn">Sham tak</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">punjab</button>
+                    <button class="btn basic option-btn">12 baje tak</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">TamilNadu</button>
+                    <button class="btn basic option-btn">Dopehr tak</button>
                 </div>
-                <div class="m-1">
-                    <button class="btn basic option-btn">Maharashtra</button>
-                </div>
-                <button class="btn basic next-btn">Next Question</button>
+                <a href="/mcq/hera-pheri/hera-pheri-2.html"><button class="btn next-btn">Next Question</button></a>
             </div>
         </div>
     </div>
