Feat:added cricket quiz and fix some spells

--- a/quizzes/quizzes.html
+++ b/quizzes/quizzes.html
@@ -25,7 +25,7 @@
                 <img src="/assets/pesa.jpg" class="product-img quiz-img" alt="">
                 <main class="middle p-1">
                     <p class="para">Phir Hera Pheri</p>
-                    <div class="small-1">Take part in the amazing quiz and test your knowledge in Movies</div>
+                    <div class="small-1">Take part in the amazing quiz and test your knowledge about Phir Hera Pheri Movie</div>
                     <div class="flex space-between mt-1">
                         <div>3 questions</div>
                         <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
@@ -38,7 +38,7 @@
                 <img src="/assets/mahabharat.jpeg" class="product-img quiz-img" alt="">
                 <main class="middle p-1">
                     <p class="para">Mahabharata</p>
-                    <div class="small-1">Take part in the amazing quiz and test your knowledge in Mahabharata</div>
+                    <div class="small-1">Take part in the amazing quiz and test your knowledge about Mahabharata</div>
                     <div class="flex space-between mt-1">
                         <div>3 questions</div>
                         <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
@@ -48,10 +48,10 @@
         </div>
         <div class="card quiz-card">
             <div class="card-main-section quiz-card-main">
-                <img src="/assets/fashion-1.jpeg" class="product-img quiz-img" alt="">
+                <img src="/assets/mahi.jpg" class="product-img quiz-img" alt="">
                 <main class="middle p-1">
-                    <p class="para">Fashion</p>
-                    <div class="small-1">Take part in the amazing quiz and test your knowledge in Fashion</div>
+                    <p class="para">Cricket</p>
+                    <div class="small-1">Take part in the amazing quiz and test your knowledge about Cricket</div>
                     <div class="flex space-between mt-1">
                         <div>3 questions</div>
                         <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
