Update: added cricket quiz

--- a/mcq/cricket/cricket-2.html
+++ b/mcq/cricket/cricket-2.html
@@ -11,29 +11,29 @@
 <body>
     <div class="question-wrapper pb-2">
         <div class="centered">
-            <h1>Fashion Quiz</h1>
+            <h1>Cricket Quiz</h1>
         </div>
         <div class="flex space-between mx-3">
             <div>
-                3/3
+                2/3
             </div>
             <div>
                 Score: 0
             </div>
         </div>
         <div class="question">
-            <h1 class="mcq">The paper dress was a short-lived fad in which decade?</h1>
+            <h1 class="mcq">Who is known as Captain Cool?</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
-                    <button class="btn basic option-btn">1990s</button>
+                    <button class="btn basic option-btn">Rohit Sharma</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">1960s</button>
+                    <button class="btn basic option-btn">Virat Kohli</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">1890s</button>
+                    <button class="btn basic option-btn">Mahendra Singh Dhoni</button>
                 </div>
-                <a href="/mcq"><button class="btn next-btn">See Result</button></a>
+                <a href="/mcq/cricket/cricket-3.html"><button class="btn next-btn">Next Question</button></a>
             </div>
         </div>
     </div>
