--- a/mcq/cricket/cricket-3.html
+++ b/mcq/cricket/cricket-3.html
@@ -11,29 +11,29 @@
 <body>
     <div class="question-wrapper pb-2">
         <div class="centered">
-            <h1>Fashion Quiz</h1>
+            <h1>Cricket Quiz</h1>
         </div>
         <div class="flex space-between mx-3">
             <div>
-                2/3
+                3/3
             </div>
             <div>
                 Score: 0
             </div>
         </div>
         <div class="question">
-            <h1 class="mcq">Which term describes a dress with a triangular silhouette?</h1>
+            <h1 class="mcq">Who is the Top Run Scorer in the 2019 Cricket World Cup?</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
-                    <button class="btn basic option-btn">Ball gown</button>
+                    <button class="btn basic option-btn">MS Dhoni</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">A-line</button>
+                    <button class="btn basic option-btn">Rohit Sharma</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">Shift</button>
+                    <button class="btn basic option-btn">Virat Kohli</button>
                 </div>
-                <a href="/mcq/fashion/fashion-3.html"><button class="btn next-btn">Next Question</button></a>
+                <a href="/mcq"><button class="btn next-btn">See Result</button></a>
             </div>
         </div>
     </div>
