--- a/mcq/cricket/cricket-1.html
+++ b/mcq/cricket/cricket-1.html
@@ -11,7 +11,7 @@
 <body>
     <div class="question-wrapper pb-2">
         <div class="centered">
-            <h1>Fashion Quiz</h1>
+            <h1>Cricket Quiz</h1>
         </div>
         <div class="flex space-between mx-3">
             <div>
@@ -22,18 +22,18 @@
             </div>
         </div>
         <div class="question">
-            <h1 class="mcq">Which fashion designer is credited with having launched the skinny silhouette for menswear in the 2000s?</h1>
+            <h1 class="mcq">How many times did India win the Cricket World Cup?</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
-                    <button class="btn basic option-btn">Karl Lagerfeld</button>
+                    <button class="btn basic option-btn">1 time</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">Ralph Lauren</button>
+                    <button class="btn basic option-btn">2 times</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn">Hedi Slimane</button>
+                    <button class="btn basic option-btn">3 times</button>
                 </div>
-                <a href="/mcq/fashion/fashion-2.html"><button class="btn next-btn">Next Question</button></a>
+                <a href="/mcq/cricket/cricket-2.html"><button class="btn next-btn">Next Question</button></a>
             </div>
         </div>
     </div>
