--- a/maha-result/maha-result-1.html
+++ b/maha-result/maha-result-1.html
@@ -6,32 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GarudaQuiz/Result</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
-    <link rel="stylesheet" href="/result/result.css">
+    <link rel="stylesheet" href="/maha-result/result.css">
 </head>
 <body>
-    <div class="question-wrapper">
+    <div class="question-wrapper pb-3">
         <div class="centered">
             <h1>Result</h1>
         </div>
         <div class="centered m-1">
-            <h2>final Score:-2/1</h2>
+            <h2>final Score: 3/3</h2>
         </div>
         <div class="question">
-            <h1>Which of the following states in India is called as 'Rice Bowl Of India'?</h1>
+            <h1 class="mcq">Krishna was the charioteer of Arjuna. This gave him a special name. What was it?</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
-                    <button class="btn basic option-btn">Andhra Pradesh</button>
+                    <button class="btn option-btn right-ans">Parthasarathy</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn right-ans">punjab</button>
+                    <button class="btn option-btn">Madhava</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn basic option-btn wrong-ans">TamilNadu</button>
+                    <button class="btn option-btn">Kannan</button>
                 </div>
-                <div class="m-1">
-                    <button class="btn basic option-btn">Maharashtra</button>
-                </div>
-                <button class="btn basic next-btn">Next Question</button>
             </div>
         </div>
     </div>
