Update: updated result page

--- a/maha-result/maha-result-1.html
+++ b/maha-result/maha-result-1.html
@@ -9,13 +9,45 @@
     <link rel="stylesheet" href="/maha-result/result.css">
 </head>
 <body>
-    <div class="question-wrapper pb-3">
-        <div class="centered">
-            <h1>Result</h1>
+    <div class="centered">
+        <h1>Result</h1>
+    </div>
+    <div class="centered m-1">
+        <h2>final Score: 3/3</h2>
+    </div>
+    <div class="question-wrapper p-3 m-2">
+        <div class="question">
+            <h1 class="mcq">Krishna was the charioteer of Arjuna. This gave him a special name. What was it?</h1>
+            <div class="centered flex-direction-col">
+                <div class="m-1">
+                    <button class="btn option-btn right-ans">Parthasarathy</button>
+                </div>
+                <div class="m-1">
+                    <button class="btn option-btn">Madhava</button>
+                </div>
+                <div class="m-1">
+                    <button class="btn option-btn">Kannan</button>
+                </div>
+            </div>
         </div>
-        <div class="centered m-1">
-            <h2>final Score: 3/3</h2>
+    </div>
+    <div class="question-wrapper p-3">
+        <div class="question">
+            <h1 class="mcq">Krishna was the charioteer of Arjuna. This gave him a special name. What was it?</h1>
+            <div class="centered flex-direction-col">
+                <div class="m-1">
+                    <button class="btn option-btn right-ans">Parthasarathy</button>
+                </div>
+                <div class="m-1">
+                    <button class="btn option-btn">Madhava</button>
+                </div>
+                <div class="m-1">
+                    <button class="btn option-btn">Kannan</button>
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="question-wrapper p-3">
         <div class="question">
             <h1 class="mcq">Krishna was the charioteer of Arjuna. This gave him a special name. What was it?</h1>
             <div class="centered flex-direction-col">
