mahabharata result done

--- a/maha-result/maha-result-1.html
+++ b/maha-result/maha-result-1.html
@@ -13,36 +13,36 @@
         <h1>Result</h1>
     </div>
     <div class="centered m-1">
-        <h2>final Score: 3/3</h2>
+        <h2>Final Score: 3/3</h2>
     </div>
     <div class="question-wrapper p-3 m-2">
         <div class="question">
-            <h1 class="mcq">Krishna was the charioteer of Arjuna. This gave him a special name. What was it?</h1>
+            <h1 class="mcq">Let us start off with a straightforward one. The Great War lasted for _____ days of fighting.</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
-                    <button class="btn option-btn right-ans">Parthasarathy</button>
+                    <button class="btn option-btn">20</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn option-btn">Madhava</button>
+                    <button class="btn option-btn right-ans">18</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn option-btn">Kannan</button>
+                    <button class="btn option-btn">21</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="question-wrapper p-3">
         <div class="question">
-            <h1 class="mcq">Krishna was the charioteer of Arjuna. This gave him a special name. What was it?</h1>
+            <h1 class="mcq">What is the other name of Radheya?</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
-                    <button class="btn option-btn right-ans">Parthasarathy</button>
+                    <button class="btn option-btn">Partha</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn option-btn">Madhava</button>
+                    <button class="btn option-btn">Kiriti</button>
                 </div>
                 <div class="m-1">
-                    <button class="btn option-btn">Kannan</button>
+                    <button class="btn option-btn right-ans">Karna</button>
                 </div>
             </div>
         </div>
