added home and questions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header class="e-com-header">
         <nav class="e-com-navbar flex">
             <div class="quiz-logo quiz-color">
-                GarudaQuiz
+                <a class="quiz-color" href="">
+                    GarudaQuiz
+                </a>
             </div>
         </nav>
     </header>
@@ -29,8 +31,8 @@
                 Are you interested in Quizes ?
             </p>
             <p>Participate in the quizzes handpicked for you</p>
-            <div class="p-2">
-                <a href=""><button class="btn quiz-btn quiz-bg-color">Start Quiz</button></a>
+            <div class="mt-2 flex justify-content-center">
+                <a class="flex" href="/quizzes/quizzes.html"><button class="btn quiz-btn quiz-bg-color">Start Quiz</button></a>
             </div>
         </div>
     </main>
