--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main class="quiz-home-main flex centered">
         <div class="quiz-img-wrapper mt-2">
-            <img src="/assets/undraw_transfer_money_rywa (1).svg" alt="" class="quiz-img">
+            <img src="/assets/undraw_transfer_money_rywa (1).svg" alt="landing-image" class="quiz-img">
         </div>
         <div class="m-2 quiz-start">
             <h1 class="main-color quiz-color">Welcome to Garuda Quiz</h1>
