update:linked all pages

--- a/mcq/hera-pheri/hera-pheri-3.html
+++ b/mcq/hera-pheri/hera-pheri-3.html
@@ -33,7 +33,7 @@
                 <div class="m-1">
                     <button class="btn basic option-btn">Heart</button>
                 </div>
-                <a href=""><button class="btn next-btn">See Result</button></a>
+                <a href="/hera-pheri-result/hera-pheri-result-1.html"><button class="btn next-btn">See Result</button></a>
             </div>
         </div>
     </div>
