--- a/mcq/mahabharata/maha-3.html
+++ b/mcq/mahabharata/maha-3.html
@@ -33,7 +33,7 @@
                 <div class="m-1">
                     <button class="btn basic option-btn">Kannan</button>
                 </div>
-                <a href="/mcq/mahabharata/maha-3.html"><button class="btn next-btn">See Result</button></a>
+                <a href="/maha-result/maha-result-1.html"><button class="btn next-btn">See Result</button></a>
             </div>
         </div>
     </div>
