--- a/quizzes/quizzes.html
+++ b/quizzes/quizzes.html
@@ -28,7 +28,7 @@
                     <div class="small-1">Take part in the amazing quiz and test your knowledge about Phir Hera Pheri Movie</div>
                     <div class="flex space-between mt-1">
                         <div>3 questions</div>
-                        <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                        <a href="/rules/movie-rules.html"><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
                     </div>
                 </main>
             </div>
@@ -41,7 +41,7 @@
                     <div class="small-1">Take part in the amazing quiz and test your knowledge about Mahabharata</div>
                     <div class="flex space-between mt-1">
                         <div>3 questions</div>
-                        <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                        <a href="/rules/maha-rules.html"><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
                     </div>
                 </main>
             </div>
@@ -54,7 +54,7 @@
                     <div class="small-1">Take part in the amazing quiz and test your knowledge about Cricket</div>
                     <div class="flex space-between mt-1">
                         <div>3 questions</div>
-                        <a href=""><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
+                        <a href="/rules/fashion-rules.html"><button class="btn start-quiz-btn quiz-bg-color">Start Quiz</button></a>
                     </div>
                 </main>
             </div>
