--- a/rules/movie-rules.html
+++ b/rules/movie-rules.html
@@ -23,7 +23,7 @@
             <div class="m-1">Each wrong answer has negative mark of -1</div>
             <div class="m-1">All the best!!</div>
             <div class="flex centered">
-                <a href=""><button class="btn rules-btn quiz-bg-color">Start Quiz</button></a>
+                <a href="/mcq/hera-pheri/hera-pheri-1.html"><button class="btn rules-btn quiz-bg-color">Start Quiz</button></a>
             </div>
         </div>
     </div>
