--- a/mcq/cricket/cricket-3.html
+++ b/mcq/cricket/cricket-3.html
@@ -33,7 +33,7 @@
                 <div class="m-1">
                     <button class="btn basic option-btn">Virat Kohli</button>
                 </div>
-                <a href="/mcq"><button class="btn next-btn">See Result</button></a>
+                <a href="/cricket-result/cricket-result.html"><button class="btn next-btn">See Result</button></a>
             </div>
         </div>
     </div>
