fix:fixed responsiveness

--- a/rules/fashion-rules.html
+++ b/rules/fashion-rules.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <div class="rule-container centered">
-        <div class="rules-wrapper">
+    <div class="rule-container">
+        <div class="rules-wrapper py-5">
             <div class="flex justify-content-center">
                 <h1 class="rules mg-auto">Rules</h1>
             </div>
