--- a/rules/movie-rules.html
+++ b/rules/movie-rules.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GarudaQuiz/Rules</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
-    <link rel="stylesheet" href="/rules/movie-rules.css">
+    <link rel="stylesheet" href="/rules/fashion-rules.css">
 </head>
 
 <body>
     <div class="rule-container centered">
-        <div class="rules-wrapper">
+        <div class="rules-wrapper py-5">
             <div class="flex justify-content-center">
                 <h1 class="rules mg-auto">Rules</h1>
             </div>
