--- a/cricket-result/cricket-result.html
+++ b/cricket-result/cricket-result.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GarudaQuiz/Result</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
-    <link rel="stylesheet" href="/maha-result/result.css">
+    <link rel="stylesheet" href="/mcq/hera-pheri/hera-pheri.css">
 </head>
 <body>
     <div class="centered">
