--- a/maha-result/maha-result-1.html
+++ b/maha-result/maha-result-1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GarudaQuiz/Result</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
-    <link rel="stylesheet" href="/maha-result/result.css">
+    <link rel="stylesheet" href="/mcq/hera-pheri/hera-pheri.css">
 </head>
 <body>
     <div class="centered">
@@ -17,7 +17,7 @@
     </div>
     <div class="question-wrapper p-3 m-2">
         <div class="question">
-            <h1 class="mcq">Let us start off with a straightforward one. The Great War lasted for _____ days of fighting.</h1>
+            <h1 class="mcq">Let us start off with a simple one. The Great War lasted for _____ days of fighting.</h1>
             <div class="centered flex-direction-col">
                 <div class="m-1">
                     <button class="btn option-btn">20</button>
