quiz authentication added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     GarudaQuiz
                 </a>
             </div>
+            <a href="/quiz-login/quiz-login.html">
+                <button class="btn basic quiz-bg-color">Login</button>
+            </a>
         </nav>
     </header>
     <main class="quiz-home-main flex centered">
