--- a/quizzes/quizzes.html
+++ b/quizzes/quizzes.html
@@ -17,6 +17,7 @@
             <div class="quiz-logo quiz-color">
                 GarudaQuiz
             </div>
+            <button class="btn basic quiz-bg-color">Log Out</button>
         </nav>
     </header>
     <main class="quizzes-main flex centered mt-3">
