update: name and label update

--- a/quiz-signup/quiz-signup.html
+++ b/quiz-signup/quiz-signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopShip/SignUp</title>
+    <title>Quiz/SignUp</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
     <link rel="stylesheet" href="/quiz-signup/quiz-signup.css">
     <link rel="stylesheet" href="/home.css">
@@ -15,15 +15,15 @@
         <div class="signup-wrapper flex flex-direction-col align-items px-3 pb-4">
             <h1 class="mb-3">Signup</h1>
             <div class="pb-1">
-            <label for="" class="email-label">Email address</label>
+            <label for="quiz-mail" class="email-label">Email address</label>
             <div>
-                <input type="text" class="signup-input px-3">
+                <input id="quiz-mail" type="text" class="signup-input px-3">
             </div>
             </div>
             <div class="pb-1">
-            <label for="" class="passwaord-label">Password</label>
+            <label for="quiz-password" class="passwaord-label">Password</label>
             <div>
-                <input type="password" class="signup-input px-3">
+                <input id="quiz-password" type="password" class="signup-input px-3">
             </div>
             </div>
             <div class="flex pb-1">
