--- a/quiz-login/quiz-login.html
+++ b/quiz-login/quiz-login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopShip/Login</title>
+    <title>Quiz/Login</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
     <link rel="stylesheet" href="/quiz-login/quiz-login.css">
     <link rel="stylesheet" href="/home.css">
