--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/108bfd668b.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="/assets/quiz-fav.jpg" type="image/x-icon">
 </head>
 
 <body>
