--- a/mcq/cricket/cricket-1.html
+++ b/mcq/cricket/cricket-1.html
@@ -7,6 +7,7 @@
     <title>GarudaQuiz/MCQ</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
     <link rel="stylesheet" href="/mcq/hera-pheri/hera-pheri.css">
+    <link rel="shortcut icon" href="/assets/quiz-fav.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="question-wrapper pb-2">
