--- a/quiz-login/quiz-login.html
+++ b/quiz-login/quiz-login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/quiz-login/quiz-login.css">
     <link rel="stylesheet" href="/home.css">
     <script src="https://kit.fontawesome.com/108bfd668b.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="/assets/quiz-fav.jpg" type="image/x-icon">
 </head>
 <body>
     <section class="login-section centered align-items">
