--- a/rules/maha-rules.html
+++ b/rules/maha-rules.html
@@ -8,6 +8,7 @@
     <title>GarudaQuiz/Rules</title>
     <link rel="stylesheet" href="https://garuda-ui.netlify.app/index.css">
     <link rel="stylesheet" href="/rules/fashion-rules.css">
+    <link rel="shortcut icon" href="/assets/quiz-fav.jpg" type="image/x-icon">
 </head>
 
 <body>
